TRV-1147 fix brand heights - citibank too small and makes it mess up

--- a/src/main/webapp/bundles/travel/less/logoGrid.less
+++ b/src/main/webapp/bundles/travel/less/logoGrid.less
@@ -9,11 +9,15 @@
 
 .brands-modal .modal-body {
 	@media(min-width: @screen-md-min) {
+
 		padding: 0px;
 		.brands-content {
 			height:540px;
 			overflow:auto;
 			padding:20px;
+			> div {
+				min-height: 90px;
+			}
 		}
 	}
 
